# sidecoin

./: .gitignore  .travis.yml  CNAME  COPYING  Doxyfile  INSTALL  Makefile.am  README.md  bdb48.sh  bdb_version_check.cpp  build.sh  configure.ac  echo  index.html  install.sh  install.sh.save  iptables.firewall.rules  params.json  rename.sh  reset-datadir.sh  scarycoin.conf  sidecoin.conf  snapshot
contrib/: README.md  qt_translations.py  scarycoin-qt.pro  scarycoind.bash-completion  sidecoin-qt.pro  sidecoind.bash-completion  tidy_datadir.sh
contrib/bitrpc/: README.md  bitrpc.py
contrib/debian/: README.md  changelog  control  copyright  rules  scarycoin-qt.desktop  scarycoin-qt.install  scarycoin-qt.lintian-overrides  scarycoin-qt.protocol  scarycoind.bash-completion  scarycoind.examples  scarycoind.install  scarycoind.lintian-overrides  scarycoind.manpages  sidecoin-qt.lintian-overrides  sidecoind.examples  sidecoind.install  watch
contrib/devtools/: README.md  fix-copyright-headers.py
contrib/gitian-descriptors/: README.md  deps-linux.yml  deps-win.yml  gitian-linux.yml  gitian-win.yml  qt-win.yml
contrib/gitian-downloader/: linux-download-config  win32-download-config
contrib/linearize/: example-linearize.cfg  linearize.py
contrib/macdeploy/: README.md  fancy.plist  macdeployqtplus
contrib/pyminer/: README.md  pyminer.py
contrib/qos/: README.md  tc.sh
contrib/seeds/: README.md
contrib/spendfrom/: README.md  setup.py  spendfrom.py
contrib/testgen/: README.md  base58.py
contrib/verifysfbinaries/: verify.sh
doc/: Doxyfile  README.md  README_windows.txt  assets-attribution.md  build-msw.md  build-osx.md  build-unix.md  coding.md  multiwallet-qt.md  release-notes.md  release-process.md  tor.md  translation_process.md  unit-tests.md
doc/release-notes/: release-notes-0.3.12.md  release-notes-0.3.13.md  release-notes-0.3.14.md  release-notes-0.3.15.md  release-notes-0.3.18.md  release-notes-0.3.20.2.md  release-notes-0.3.20.md  release-notes-0.3.21.md  release-notes-0.3.22.md  release-notes-0.3.23.md  release-notes-0.3.24.md  release-notes-0.4.0.md  release-notes-0.4.1.md  release-notes-0.4.3.md  release-notes-0.4.4.md  release-notes-0.4.6.md  release-notes-0.5.0.md  release-notes-0.5.1.md  release-notes-0.5.2.md  release-notes-0.5.3.md  release-notes-0.5.4.md  release-notes-0.5.5.md  release-notes-0.6.0.md  release-notes-0.6.2.md  release-notes-0.6.3.md  release-notes-0.7.0.md  release-notes-0.7.1.md  release-notes-0.7.2.md  release-notes-0.8.0.md  release-notes-0.8.1.md  release-notes-0.8.2.md  release-notes-0.8.3.md  release-notes-0.8.4.md  release-notes-0.8.5.md  release-notes-0.8.6.md
qa/pull-tester/: build-tests.sh.in  pull-tester.py  pull-tester.sh  run-scarycoind-for-test.sh.in  (+2 more)
share/: setup.nsi.in  ui.rc
src/: .gitignore  Makefile.am  Makefile.include  addrman.h  alert.cpp  alert.h  allocators.cpp  allocators.h  base58.h  bdb_version_check  bdb_version_check.cpp  bignum.h  bloom.cpp  bloom.h  chainparams.cpp  chainparams.h  checkpoints.cpp  checkpoints.h  checkqueue.h  clientversion.h  coincontrol.h  coins.cpp  coins.h  compat.h  core.cpp  core.h  core.h.autosave  crypter.cpp  crypter.h  db.cpp  db.h  dbg.h  hash.h  init.cpp  init.cpp.autosave  init.h  install_bdb.sh  keccak.c  key.cpp  key.h  (+72 more)
src/balances/: balances.h  balances.txt
src/bdb/build_unix/: db_archive  db_checkpoint  db_deadlock  db_dump  db_hotbackup  db_load  db_printlog  db_recover  db_sql  db_stat  db_upgrade  db_verify
src/boost/: Boost.cpp  Makefile
src/json/: json_spirit_value.h  json_spirit_writer_template.h
src/m4/: scarycoin_find_bdb48.m4  scarycoin_qt.m4  scarycoin_subdir_to_include.m4  sidecoin_find_bdb48.m4  sidecoin_subdir_to_include.m4
src/qt/: Makefile.am  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  coincontroltreewidget.h  csvmodelwriter.cpp  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macdockiconhandler.h  macdockiconhandler.mm  macnotificationhandler.h  macnotificationhandler.mm  monitoreddatamapper.cpp  monitoreddatamapper.h  notificator.cpp  notificator.h  openuridialog.cpp  openuridialog.h  optionsdialog.cpp  optionsdialog.h  optionsmodel.cpp  optionsmodel.h  overviewpage.cpp  overviewpage.h  paymentrequest.proto  paymentrequestplus.cpp  (+65 more)
src/qt/forms/: aboutdialog.ui  addressbookpage.ui  helpmessagedialog.ui  intro.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: scarycoin_ach.ts  scarycoin_af_ZA.ts  scarycoin_ar.ts  scarycoin_be_BY.ts  scarycoin_bg.ts  scarycoin_bs.ts  scarycoin_ca.ts  scarycoin_ca@valencia.ts  scarycoin_ca_ES.ts  scarycoin_cmn.ts  scarycoin_cs.ts  scarycoin_cy.ts  scarycoin_da.ts  scarycoin_de.ts  scarycoin_de_AT.ts  scarycoin_el_GR.ts  scarycoin_en.ts  scarycoin_eo.ts  scarycoin_es.ts  scarycoin_es_CL.ts  scarycoin_es_DO.ts  scarycoin_es_MX.ts  scarycoin_es_UY.ts  scarycoin_et.ts  scarycoin_eu_ES.ts  scarycoin_fa.ts  scarycoin_fa_IR.ts  scarycoin_fi.ts  scarycoin_fr.ts  scarycoin_fr_CA.ts  scarycoin_gl.ts  scarycoin_gu_IN.ts  scarycoin_he.ts  scarycoin_hi_IN.ts  scarycoin_hr.ts  scarycoin_hu.ts  scarycoin_id_ID.ts  scarycoin_it.ts  scarycoin_ja.ts  scarycoin_ka.ts  (+71 more)
src/qt/res/icons/: sidecoin.icns  sidecoin_testnet.icns  toolbar_testnet.pxm
src/qt/test/: Makefile.am  moc_uritests.cpp.autosave  test_main.cpp  uritests.cpp
src/test/: Checkpoints_tests.cpp  DoS_tests.cpp  Makefile.am  README  base58_tests.cpp  bip32_tests.cpp  bloom_tests.cpp  checkblock_tests.cpp  getarg_tests.cpp  hash_tests.cpp  key_tests.cpp  miner_tests.cpp  netbase_tests.cpp  rpc_wallet_tests.cpp  test_scarycoin.cpp  util_tests.cpp
src/test/data/: base58_encode_decode.json  base58_keys_valid.json
src/truthlib/: consensus.cpp  consensus.h  makefile.test  payouts.cpp  payouts.h
(+30 files in other folders)
